--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "discord-getting-started",
+  "name": "discord-custom-list-bot",
   "private": true,
   "version": "1.0.0",
-  "description": "Discord example app",
+  "description": "Discord custom list app",
   "main": "app.js",
   "type": "module",
   "engines": {
