--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "register": "node commands.js",
     "dev": "nodemon app.js"
   },
-  "author": "Shay DeWael",
+  "author": "Duan2baka",
   "license": "MIT",
   "dependencies": {
     "discord-interactions": "^4.0.0",
+    "discord.js": "^14.16.3",
     "dotenv": "^16.0.3",
     "express": "^4.19.2",
     "mysql": "github:mysqljs/mysql"
