--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
-    "mysql": "^2.18.1"
+    "fluent-ffmpeg": "^2.1.3",
+    "mysql": "^2.18.1",
+    "request": "^2.88.2",
+    "requests": "^0.3.0"
   }
 }
