--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "fluent-ffmpeg": "^2.1.3",
     "mysql": "^2.18.1",
+    "ollama": "^0.5.14",
     "request": "^2.88.2",
     "requests": "^0.3.0"
   }
