--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "@discord-player/extractor": "^7.1.0",
     "axios": "^1.7.7",
-    "discord.js": "^14.16.3",
-    "dotenv": "^16.4.5",
+    "discord-player": "^7.1.0",
+    "discord.js": "^14.18.0",
+    "dotenv": "^16.4.7",
     "fluent-ffmpeg": "^2.1.3",
     "mysql": "^2.18.1",
     "ollama": "^0.5.14",
