--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@discord-player/extractor": "^7.1.0",
+    "@distube/ytdl-core": "^4.16.8",
     "axios": "^1.7.7",
     "discord-player": "^7.1.0",
     "discord.js": "^14.18.0",
@@ -18,7 +19,9 @@
     "fluent-ffmpeg": "^2.1.3",
     "mysql": "^2.18.1",
     "ollama": "^0.5.14",
+    "play-dl": "^1.9.7",
     "request": "^2.88.2",
-    "requests": "^0.3.0"
+    "requests": "^0.3.0",
+    "ytdl-core": "^4.9.1"
   }
 }
