--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
     "fluent-ffmpeg": "^2.1.3",
+    "mediaplex": "^1.0.0",
     "mysql": "^2.18.1",
     "ollama": "^0.5.14",
     "play-dl": "^1.9.7",
