--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "description": "",
   "dependencies": {
     "@discord-player/extractor": "^7.1.0",
+    "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.18.0",
     "@distube/ytdl-core": "^4.16.8",
     "axios": "^1.7.7",
+    "bgutils-js": "^3.2.0",
     "discord-player": "^7.1.0",
+    "discord-player-youtubei": "^1.4.5",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
     "fluent-ffmpeg": "^2.1.3",
